--- a/style.css
+++ b/style.css
@@ -49,14 +49,33 @@ a{
     /* background-color: #5e17eb; */
 }
 
-/* ********************* FAZENDO O CORPO DO SITE************************* */
+/* ********************* FAZENDO O CORPO DO SITE ************************* */
 
+.flex{
+    min-height: 100vh;
+    background-color: darkgray;
+    display: flex;
+    flex-direction: column;    
+    
+}
 /* Ajustando o tamanho da imagem */
 .imagem{
     width: 400px;
     height: auto;
 }
 
-body{
-    background-color: rgb(230, 230, 230);
+/* Ajustando os ítens da página */
+
+.item{
+    display: flex;
+    /* justify-content: flex-end; */
+    align-items: flex-start;
+    border: 2px solid black;
+    margin: 10px;
 }
+
+.paragrafo{
+    padding: 10px;
+    text-align: justify;
+}
+
